--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.0",
-    "@shopify/cli": "^3.72.0",
+    "@shopify/cli": "^3.88.1",
     "@shopify/hydrogen-codegen": "^0.3.1",
-    "@shopify/mini-oxygen": "^3.0.6",
+    "@shopify/mini-oxygen": "3.0.6",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.0",
-    "vite": "^5.4.11",
+    "vite": "5.3.0",
     "vite-tsconfig-paths": "^5.0.0"
   }
 }
