--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "typescript": "^5.2.0",
     "vite": "5.3.0",
     "vite-tsconfig-paths": "^5.0.0"
+  },
+  "resolutions": {
+    "undici": "6.13.0"
+  },
+  "overrides": {
+    "undici": "6.13.0"
   }
 }
